2004-10-16 23:18  svu

	* NEWS: preparing 1.10

2004-10-11 23:38  svu

	* libxklavier/: xklavier_config.c, xklavier_config_xkb.c,
	  xklavier_private.h, xklavier_xkb.c: Introducing the envvar
	  XKL_DEBUG - I am sick of calling XklSetDebug manually

2004-10-10 23:38  svu

	* libxklavier/xklavier_config_xkb.c, libxklavier/xklavier_xkb.c,
	  tests/test_config.c, tests/test_monitor.c: The revolution is on.
	  The whole description is not compiled on the client side -
	  nothing on the server side

2004-10-04 22:51  svu

	* ChangeLog, configure.in, libxklavier/xklavier_config.h,
	  libxklavier/xklavier_config_xkb.c, tests/.cvsignore,
	  tests/test_config.c: Cleaning up some functions. BREAKING the
	  API/ABI. Hope people will not start chasing me with axes...

2004-10-04 19:31  svu

	* configure.in: 1.10 but not 1.1

2004-10-02 01:32  svu

	* NEWS, RELEASE_NOTES_1_01, RELEASE_NOTES_1_02, configure.in: a bit
	  of cleanup

2004-10-01 23:04  svu

	* NEWS: mentioning tests in the NEWS

2004-10-01 22:55  svu

	* ChangeLog, NEWS, configure.in: preparing 1.04

2004-10-01 21:51  svu

	* ChangeLog, Makefile.am, configure.in,
	  libxklavier/xklavier_config.c, libxklavier/xklavier_config_xkb.c,
	  libxklavier/xklavier_props.c, tests/.cvsignore,
	  tests/Makefile.am, tests/test_config.c, tests/test_monitor.c:
	  Syncing with HEAD. Major leaks nailed. Default ruleset introduced
	  (well, it does not help much)

2004-09-30 02:17  svu

	* tests/test_config.c: now, test_config can set debug level as well

2004-09-30 02:15  svu

	* libxklavier/xklavier_config_xkb.c: dumping low-level components
	  before calling XkbGetKeyboardByName

2004-09-26 03:57  svu

	* tests/: test_config.c, test_monitor.c: monitor is working
	  somehow, more when needed

2004-09-25 02:40  svu

	* libxklavier/xklavier_config_xkb.c: bit of code polish

2004-09-25 02:25  svu

	* tests/: .cvsignore, Makefile.am, test_config.c, test_monitor.c:
	  printing the usage, adding the monitor app

2004-09-25 01:57  svu
